--- a/Projeto-Sing-In/styles.css
+++ b/Projeto-Sing-In/styles.css
@@ -20,16 +20,18 @@ body {
     text-align: center;
     padding: 1em;
     margin-top: 3.5em;
+    margin-bottom: 0.2em;
 }
 
 .logo__titulo {
     color: var(--black);
     font-weight: 500;
     padding: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 .principal {
-    padding: 1em;
+    padding: 1.5em;
 }
 
 .principal__titulo {
@@ -42,7 +44,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     color: var(--accent2);
-    padding-bottom: 3em;
+    margin-bottom: 4em;
 }
 
 .lable__email {
@@ -56,8 +58,8 @@ body {
     border: 1px solid var(--accent1);
     border-radius: 8px;
     width: 98%;
-    padding: 0.5em 0;
-    margin: 1em 0;
+    padding: 0.8em 0;
+    margin: 0.7em 0 1em 0;
 }
 
 .lable__password {
@@ -68,6 +70,8 @@ body {
 .principal__past {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 2.3em;
+    margin-top: 0.5em;
 }
 
 .remember-me {
@@ -86,20 +90,39 @@ body {
     background-color: var(--primary-color);
     color: #FFF;
     margin: 1em auto;
-}
-
-.principal__google-button {
-    display: block;
-    margin: 1em auto;
-    background-color: transparent;
-    border: 1px solid var(--accent1);
-}
-
-.principal__sing-button,
-.principal__google-button {
-    padding: 0.7em 9.4em;
+    padding: 0.8em 8.9em;
     border-radius: 8px;
 }
+
+.principal__google-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4em;
+    padding: 0.7em ;
+    margin: 1em 0.3em;
+    border-radius: 8px;
+    background-color: transparent;
+    border: 1px solid var(--accent2);
+}
+
+.sing-up__container {
+    display: flex;
+    justify-content: center;
+    margin-top: 2em;
+    gap: 0.3em;
+}
+
+.principal__sub,
+.principal__sing-up {
+    font-size: 14px;
+}
+
+.principal__sing-up {
+    font-weight: 500;
+    color: #5429FF;
+}
+
 
 
 
